Fix #36137: cycles render not using all GPU's when the number of GPU's is larger than the number of CPU threads